methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:23: error: ';' expected but 'else' found.
  else if (isFacingTrail==true){
  ^SlugHunting:27: error: ';' expected but 'else' found.
  else if (isFacingTrail==true){
  ^