methods.slug.SlugHunting.scala.code
def hunt() {
  direction()
  while (isFacingTrail==true and estSurBiscuit==false){
      baisseBrosse()
      leveBrosse()
      avance()
    }
  if (estSurBiscuit==true){
    prendreBiscuit()
  }
  else{
    hunt()
  }

}

def direction():Int= {
  if (isFacingTrail==true){
    return 0
  }
  gauche()
  else if (isFacingTrail==true){
      return 1
    }
  droite();droite()
  else if (isFacingTrail==true){
      return 2
    }
  }

def isFacingTrail():Boolean = {
    if (estFaceMur==true){
      return false
  }
    else{
      avance()
      if (getCouleurSol()==Color.green){
        recule()
        return true
      }
      else {
        recule()
        return false
      }
    }
}